<resources>
    <string name="app_name">Batur</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="onbackpressed">Please click BACK again to exit</string>
    <string name="data_empty">Data not available</string>
    <string name="data_empty_desc">The request data does not exist</string>
    <string name="keluar">Keluar</string>
    <string name="cek_koneksi">Cek koneksi internet Anda</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="error">Terjadi kesalahan</string>
    <string name="prioritas_visit">Prioritas Visit</string>
    <string name="cari">Cari</string>
    <string name="area">Area</string>
    <string name="management_unit">Management Unit</string>
    <string name="desa">Desa</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="ya">Ya</string>
    <string name="yakin_keluar">Yakin keluar aplikasi?</string>
    <string name="tidak">Tidak</string>
    <string name="loading">Loading</string>
    <string name="all">All</string>
    <string name="nama_petani_dan_alamat">Nama Petani dan Alamat</string>
    <string name="gambar">Foto</string>
    <string name="total_terpilih">Total data terpilih</string>
    <string name="total_semua">Total data petani %1$s</string>
    <string name="internal_memory">Internal memory</string>
    <string name="list_no_items">No items</string>
    <string name="hint_search">Search</string>
    <string name="visit">Visit</string>
    <string name="lahan">Lahan</string>
    <string name="komoditas">Komoditas</string>
    <string name="masukkan_kode_lahan">Masukkan kode lahan</string>
    <string name="input_visit">Input Visit</string>
    <string name="riwayat">Riwayat</string>
    <string name="persiapan">Persiapan</string>
    <string name="pembibitan">Pembibitan</string>
    <string name="panen">Panen</string>
    <string name="petani">Petani</string>
    <string name="data_petani_komoditas">Data Petani %1$s</string>
    <string name="jumlah_petani">Jumlah Petani : %1$d Orang</string>
    <string name="pemeliharaan">Pemeliharaan</string>
    <string name="pilih_program">Pilih Program</string>
    <string name="nomor_lahan">Nomor Lahan</string>
    <string name="pilih_komoditas_baseline">Pilih Komoditas Baseline</string>
    <string name="pilih_komoditas">Pilih Komoditas</string>
    <string name="pilih_fase">Pilih Fase</string>
    <string name="pilih_cek_area">Pilih Cek Area</string>
    <string name="photo">Photo</string>
    <string name="catatan">Catatan</string>
    <string name="catatan_hint">Masukan catatan, contoh: Buah matang tidak merata, sebagian besar masih belum matang</string>
    <string name="pilih_komoditas_baru">Pilih Komoditas Baru</string>
    <string name="cek_area">Cek Area</string>
    <string name="fase">Fase</string>
    <string name="simpan">Simpan</string>
    <string name="checklist_monitoring">Checklist Monitoring</string>
    <string name="gagal_ambil_data">Gagal ambil data, ulangi?</string>
    <string name="lanjut">Lanjut</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_tidak_sama">Password tidak sama</string>
    <string name="program">Program</string>
    <string name="refresh">Refresh</string>
    <string name="frekuensi">Frekuensi</string>
    <string name="jumlah_petani_visit">Jumlah Petani</string>
    <string name="nol">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="luas_lahan_validation">Luasnya tidak boleh melebihi luas lahan</string>
    <string name="format_isian_lahan_salah">Format isian lahan salah</string>
    <string name="format_isian_nilai_salah">Format isian nilai salah</string>
    <string name="incidental_visit">Incidental Visit</string>
    <string name="perubahan_program">Perubahan Program</string>
    <string name="perubahan_komoditas">Perubahan Komoditas</string>
    <string name="komoditas_baru">Komoditas Baru</string>
    <string name="program_baru">Program Baru</string>
    <string name="synchronize">Synchronize</string>
    <string name="data_belum_lengkap">Data belum lengkap</string>
    <string name="belum_terdata">Belum terdata</string>
    <string name="jumlah_farmer">Jumlah petani</string>
    <string name="daftar_lahan">Daftar Lahan</string>
    <string name="daftar_petani">Daftar Petani</string>
    <string name="refresh_gps">Klik Tombol Refresh GPS</string>
    <string name="tanda_tangan">Tanda Tangan</string>
    <string name="titik_dua">:</string>
    <string name="home">Home</string>
    <string name="baseline">Baseline</string>
    <string name="tracking">Tracking</string>
    <string name="monitoring">Monitoring</string>
    <string name="ktp">KTP</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="hindu">Hindu</string>
    <string name="kristen">Kristen</string>
    <string name="budha">Budha</string>
    <string name="lainnya">Lainnya</string>
    <string name="katolik">Katolik</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="kawin">Kawin</string>
    <string name="download">Download</string>
    <string name="pilih_petani">Pilih Petani</string>
    <string name="desa_terpilih">Desa terpilih %1$s</string>
    <string name="total_luas">Total Luas : %1$s</string>
    <string name="duda">Duda</string>
    <string name="belum_kawin">Belum Kawin</string>
    <string name="janda">Janda</string>
    <string name="jumlah_keluarga">Jumlah Anggota Keluarga</string>
    <string name="pekerjaan_utama">Pekerjaan Utama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="suku">Suku</string>
    <string name="kelompok_tani">Kelompok Tani</string>
    <string name="posisi_kelompok_tani">Posisi dalam Kelompok Tani</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="pendidikan_non_formal">Pendidikan Non-Formal</string>
    <string name="lokal">Lokal</string>
    <string name="pekerjaan_Sampingan">Pekerjaan Sampingan</string>
    <string name="pendatang">Pendatang</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="status_kepemilikan">Status Hak Atas Lahan</string>
    <string name="hak_milik">Hak Milik</string>
    <string name="hak_komunitas">Hak Komunitas (Contoh: Bengkok)</string>
    <string name="hak_publik">Hak Publik</string>
    <string name="hak_pemanfaatan">Hak Pemanfaatan (Sewa, Bagi Hasil, Penggarap)</string>
    <string name="tutupan_pohon">Tutupan Pohon</string>
    <string name="dua_lima">0% - 25%</string>
    <string name="lima_puluh">26% - 50%</string>
    <string name="tujuh_lima">51% - 75%</string>
    <string name="seratus">76% - 100%</string>
    <string name="aluvial">Aluvial</string>
    <string name="latosol">Latosol</string>
    <string name="podsoil">Podsoil</string>
    <string name="grumusol">Grumusol</string>
    <string name="andosol">Andosol</string>
    <string name="regasol">Regosol</string>
    <string name="tiga_ratus_dpl">&lt; 300 m dpl</string>
    <string name="enam_rarus_dpl">300–600 m dpl</string>
    <string name="sembilan_ratus_dpl">600–900 m dpl</string>
    <string name="lebih_sembilan_ratus_dpl">&gt; 900 m dpl</string>
    <string name="dua_bulan">2–4 bulan</string>
    <string name="lima_bulan">5–8 bulan</string>
    <string name="sembilan_bulan">9–12 bulan</string>
    <string name="ketersediaan_air">Ketersediaan Air Dalam Setahun/akses Ke Irigasi</string>
    <string name="ketinggian_tempat">Ketinggian Tempat</string>
    <string name="jenis_tanah">Jenis Tanah</string>
    <string name="sistem_pengelolaan_lahan">Sistem Pengelolaan Lahan</string>
    <string name="jenis_tanaman">Informasi Jenis Tanaman</string>
    <string name="pestisida">Pestisida</string>
    <string name="kimia">Kimia</string>
    <string name="non_kimia">Non Kimia</string>
    <string name="pemupukan">Pemupukan</string>
    <string name="potensi_lahan">Potensi Pemanfaatan Lahan</string>
    <string name="blok">Blok</string>
    <string name="sub_blok">Sub Blok</string>
    <string name="sejarah_budidaya">Sejarah Budidaya Lahan 3 Tahun Terakhir</string>
    <string name="kemiringan_lahan">Kemiringan Lahan</string>
    <string name="akses_jalan_desa">Akses ke Jalan Desa</string>
    <string name="asal_usul_petani">Asal Usul Petani</string>
    <string name="pendapatan_tahunan">Jumlah Pendapatan Tahunan</string>
    <string name="pemilik_rekening_atas_nama_orang_lain">Pemilik rekening atas nama orang lain</string>
    <string name="foto_surat_kuasa">Foto Surat Kuasa</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="datar">Datar (0 – 8%)</string>
    <string name="landai">Landai (8% - 15%)</string>
    <string name="agak_curam">Agak curam (15% - 25%)</string>
    <string name="curam">Curam (25% - 45%)</string>
    <string name="sangat_curam">Sangat curam (>= 45%)</string>
    <string name="rubah_lahan">Edit Lahan</string>
    <string name="lahan_terkunci">Maaf, Lahan ini terkunci</string>
    <string name="agreement">Persetujuan</string>
    <string name="agreement_desc">Dengan ini Anda setuju dengan persyaratan di atas</string>
    <string name="please_wait">Mohon menunggu…</string>
    <string name="connecting_to_server">Menghubungkan ke server…</string>
    <string name="produktivitas">Produktivitas</string>
    <string name="satuan">Satuan</string>
    <string name="waktu">Waktu</string>
    <string name="pemanfaatan">Pemanfaatan</string>
    <string name="nilai_rupiah">Nilai (rupiah)</string>
    <string name="mekanisme">Mekanisme</string>
    <string name="koorddinat_lokasi">Koorddinat Lokasi</string>
    <string name="foto_dokumen">Foto Dokumen</string>
    <string name="profil_petani">Profil Petani</string>
    <string name="nik">NIK</string>
    <string name="jumlah_pendapatan_tahunan">Jumlah Pendapatan Tahunan</string>
    <string name="email">Email</string>
    <string name="data_rekening">Data Rekening</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="pilih_desa">Pilih Desa</string>
    <string name="nomor_dokumen_lahan">Nomor Dokumen Lahan</string>
    <string name="luas_lahan">Luas Lahan</string>
    <string name="status_hak_atas_lahan">Status Hak Atas Lahan</string>
    <string name="deskripsi_lahan">Deskripsi Lahan</string>
    <string name="tambah_lahan">Tambah Lahan</string>
    <string name="edit_lahan">Edit Lahan</string>
    <string name="batal">Batal</string>
    <string name="kode_sudah_digunakan">Kode sudah digunakan!</string>
    <string name="edit_nomor_lahan">Edit Nomor Lahan</string>
    <string name="hapus_lahan">Hapus Lahan</string>
    <string name="daftar_komoditas">Daftar Komoditas</string>
    <string name="yakin_mau_hapus">Yakin mau hapus</string>
    <string name="menu_sebelumnya">Apakah Anda yakin kembali ke Menu sebelumnya?</string>
    <string name="foto_nik">Foto NIK</string>
    <string name="pilih_bank">Pilih Bank</string>
    <string name="edit_petani">Edit Petani</string>
</resources>